src/objects/JiraAttributeLookupMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <label>Attribute Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Field_Value__c</fullName>
        <label>SF Field Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsitution_Value__c</fullName>
        <label>Subsitution Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>JiraAttributeLookupMapping</label>
    <pluralLabel>JiraAttributeLookupMappings</pluralLabel>
</CustomObject>